# shatter

./: .dockerignore  .gitignore  .gitmodules  .markdownlint-cli2.yaml  .vale.ini  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LANGUAGE-EVALUATION.md  Makefile  PARITY.md  PLAN.md  PROTOCOL.md  QUICKSTART.md  README.md  SPEC.md  Taskfile.yml  action.yml  deny.toml  install.sh  manifest  package-lock.json  package.json  pnpm-lock.yaml  shatter.scope.yaml.example
.agents/: CLAUDE.md  README.md
.agentsea/: workspace.yaml
.beads/: .gitignore  PRIME.md  config.yaml  export-state.json  issues.jsonl  issues.recovered.jsonl  metadata.json
.cargo/: config.toml
.claude/: settings.json  swarm-config.md
.config/: nextest.toml
.devcontainer/: Dockerfile  devcontainer.json  post-create.sh
.launch-work/: log.md
.semgrep/: shatter.yml
audits/: 2026-02-28.md  2026-05-21.md  2026-05-24.md
benchmarks/: sample-manifest.json
cross/: Dockerfile.aarch64-unknown-linux-gnu
demo/: gauntlet-docker.sh  gauntlet-scan-allowlist.yaml  gauntlet.sh  gauntlet_check_output.py  test_gauntlet_check_output.py  walkthrough-docker.sh  walkthrough.sh  walkthrough.yaml
docker/: README.md  entrypoint.sh
docs/: CI-INTEGRATION.md  GLOSSARY.md  INDEX.md  PROJECT-LAYOUT.md  distribution.md  execution-adapters.md  go-frontend-scope-limits.md  hooks.md  performance-profiling.md  resource-parameters.md
examples/rust/enum-color/: Cargo.toml
examples/rust/enum-color/src/: color.rs
perf/: README.md  isolation-corpus.md  regression-issue-template.md  scenarios.json  stable-scenarios.txt
protocol/: GOVERNANCE.md  PARITY.md  README.md  concolic-test-frontend.sh  dead-after-handshake-once-frontend.sh  delayed-execute-frontend.sh  execute-exits-twice-frontend.sh  fixed-branch-frontend.sh  frontend-issue-template.md  generated-skip-frontend.sh  id-mismatch-frontend.sh  noop-frontend.sh  observer-recording-frontend.sh  parity-matrix.schema.yaml  (+6 more)
shatter-cli/: CLAUDE.md  Cargo.toml  Taskfile.yml  build.rs
shatter-cli/src/: args.rs  embedded_frontend.rs  embedded_go_frontend.rs  frontend_versions.rs  generated_paths.rs  helpers.rs  host_writes.rs  main.rs  render.rs  telemetry_flush.rs
shatter-cli/src/commands/: analyze.rs  bench.rs  build_frontend.rs  cache.rs  compare.rs  diff.rs  doctor.rs  explore.rs  export.rs  init.rs  list_targets.rs  mod.rs  nondeterminism.rs  observe.rs  properties.rs  revalidate.rs  run.rs  scan.rs  solve.rs  specify.rs  stale.rs  telemetry.rs  test.rs  workspace.rs
shatter-cli/templates/: explore_fn.md  explore_fn.md.j2  scan.md  scan.md.j2
shatter-cli/tests/: clean_scan_no_project_writes.rs  explore_exit_status.rs  explore_no_side_effects.rs  explore_no_target_spec.rs  include_pattern_diagnostics.rs  installation_test.rs  json_stdout_contract.rs  partial_http_writer.rs  quiet_report_emission.rs  rust_frontend_availability_test.rs  scan_failure_policy.rs  scan_no_side_effects.rs  tmpdir_regression.rs
shatter-cli/tests/common/: mod.rs
shatter-core/: CLAUDE.md  Cargo.toml  Taskfile.yml  build.rs
shatter-core/data/: crypto-registry.toml  string-ops.yaml
shatter-core/proptest-regressions/: adapter_selection.txt  bench.txt  boundary_search.txt  cache.txt  input_gen.txt  protocol.txt  shrink.txt  symbolic_unroll.txt  test_prioritization.txt
shatter-core/src/: adapter_selection.rs  analysis_cache.rs  array_mutation.rs  auto_mock.rs  batch_analyze.rs  batch_scheduler.rs  batch_state.rs  behavior.rs  bench.rs  boundary_dict.rs  boundary_search.rs  branch_profile.rs  cache.rs  call_graph.rs  canonical_json.rs  checkpoint.rs  clustering.rs  compare.rs  config.rs  core_sample.rs  coverage_metrics.rs  crypto_registry.rs  discovery.rs  drilling.rs  entropy.rs  equivalence.rs  executability.rs  execution_record.rs  explorer.rs  export.rs  file_lock.rs  fingerprint.rs  float_probe.rs  frontend.rs  frontier.rs  fuzzer.rs  genetic.rs  genetic_explorer.rs  genetic_fitness.rs  harness_storage.rs  (+57 more)
shatter-core/templates/: explore_fn.html  explore_page.html  scan_report.html
shatter-core/templates/includes/: style.html
shatter-core/tests/: e2e_concolic.rs  e2e_concolic_go.rs  e2e_concolic_rust.rs  e2e_float_probe.rs  e2e_llm_oracle.rs  fuzz_deserialization.rs  html_snapshots.rs  oracle_unit.rs  outcome_md_snapshots.rs  run_markdown_ordering_snapshots.rs  rust_explore_integration.rs  self_hosting_explore.rs  source_bucket_fixtures.rs  source_set_summary_snapshots.rs  z3_dependency_config.rs
shatter-core/tests/snapshots/: explore_fn.html  explore_page.html  outcome_md_empty_discovery.md  outcome_md_with_build_failed.md  outcome_md_with_unsupported.md  run_markdown_ordering.md  scan_report.html  source_set_summary.md
shatter-core/tests/support/: rust_frontend_harness.rs
shatter-llm/: Cargo.toml
shatter-llm/src/: anthropic.rs  custom_http.rs  google.rs  lib.rs  local_model.rs  mock.rs  openai.rs  parse.rs  prompt.rs  rate_limit.rs  registry.rs
shatter-llm/tests/: integration.rs
shatter-rust/: CLAUDE.md  Cargo.toml  Taskfile.yml
shatter-rust/src/: adapters.rs  analyzer.rs  executor.rs  file_handle_generator.rs  generators.rs  handler.rs  instrument.rs  lib.rs  main.rs  protocol.rs  setup.rs  timing.rs  wasm_generator.rs
shatter-rust/tests/: codegen_parity.rs
(+3222 files in other folders)
