[package]
name = "shatter-cli"
version = "0.1.0"
edition = "2024"
publish = false

[[bin]]
name = "shatter"
path = "src/main.rs"

[dependencies]
shatter-core = { path = "../shatter-core" }
shatter-llm = { path = "../shatter-llm" }
clap = { version = "4", features = ["derive", "env"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tempfile = "3"
log = "0.4"
env_logger = "0.11"
serde = { version = "1", features = ["derive"] }
termimad = "0.34"
askama = "0.15"
tracing = "0.1"
uuid = { version = "1", features = ["v4"] }
ureq = { version = "3", features = ["json"] }
globset = "0.4"

[dev-dependencies]
tempfile = "3"
proptest = "1"
