[package]
name = "shatter-core"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
globset = "0.4"
rand = "0.9"
rayon = "1"
thiserror = "2"
tokio = { version = "1", features = ["process", "io-util", "time", "rt", "macros", "sync"] }
sha2 = "0.10"
hex = "0.4"
ryu = "1"
unicode-normalization = "0.1"
toml = "0.8"
z3 = { version = "0.19", features = ["gh-release"] }
z3-sys = "0.10.7"
fs2 = "0.4"
libc = "0.2"
log = "0.4"
regex = "1"
contracts = "0.6"
uuid = { version = "1", features = ["v4"] }
dirs = "6"
hostname = "0.4"

[build-dependencies]
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"

[dev-dependencies]
tempfile = "3"
proptest = "1"
