[package]
name = "shatter-llm"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
shatter-core = { path = "../shatter-core" }
async-trait = "0.1"
anyhow = "1"
serde_json = "1"
tokio = { version = "1", features = ["time", "rt", "macros"] }
thiserror = "2"

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros", "time", "test-util"] }
