[package]
name = "shatter-llm"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
shatter-core = { path = "../shatter-core" }
async-trait = "0.1"
anyhow = "1"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["time", "rt", "macros", "process", "io-util"] }
thiserror = "2"
reqwest = { version = "0.12", features = ["json"] }
log = "0.4"

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros", "time", "test-util"] }
wiremock = "0.6"
