[package]
name = "shatter-rust"
version = "0.1.0"
edition = "2024"

[workspace]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
syn = { version = "2", features = ["full", "parsing", "visit-mut"] }
quote = "1"
proc-macro2 = { version = "1", features = ["span-locations"] }
