[package]
name = "shatter-rust"
version = "0.1.0"
edition = "2024"

[workspace]

[lib]
name = "shatter_rust"
path = "src/lib.rs"

[[bin]]
name = "shatter-rust"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
extism = "1"
syn = { version = "2", features = ["full", "parsing", "visit-mut"] }
quote = "1"
proc-macro2 = { version = "1", features = ["span-locations"] }
sha2 = "0.10"
tempfile = "3"

[dev-dependencies]
proptest = "1"
